# loxcpp

./: CMakeLists.txt  Lox.cpp  Lox.h  README.md
AST/: AstGenerator.cpp  AstGenerator.h  AstPrinter.cpp  AstPrinter.h
Environment/: Environment.cpp  Environment.h
Expressions/: AssignExpression.cpp  BinaryExpression.cpp  Expression.h  GroupingExpression.cpp  LiteralExpression.cpp  UnaryExpression.cpp  VarExpression.cpp
Interpreter/: Interpreter.cpp  Interpreter.h
Models/: ErrorHandler.cpp  ErrorHandler.h  ErrorModel.cpp  ErrorModel.h  LoxException.cpp  LoxException.h
Parser/: Parser.cpp  Parser.h
Scanner/: Scanner.cpp  Scanner.h
Statements/: Block.cpp  Class.cpp  ExpressionStatement.cpp  Function.cpp  Print.cpp  Statement.h  VarStatement.cpp
Token/: Literal.h  Token.cpp  Token.h
Utils/: StringUtils.cpp  StringUtils.h
test/src/: base.h  generate_ast_tests.cpp  interpreter_expression_tests.cpp  interpreter_tests.cpp  parser_tests.cpp  scanner_tests.cpp
